# spectra-to-lights

./: README.md  pyproject.toml
spectrum_to_lights/: __init__.py  _lib.py  _solvers.py
spectrum_to_lights/data/Per Channel values/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  3  4  5  6  7  8  9
